--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,51 +1,103 @@
-<!doctype html>
-<html lang="en">
-  <head>
+<!DOCTYPE html>
+<html lang="en" style="overflow-y: scroll;}">
+<head>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% block head %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
     <title>{% block title %}{% endblock %} - My Webpage</title>
     {% endblock %}
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/basicform">Basic HTML Form</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">WTF Form for flask (To Be Added)</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-  </div>
+    <title>Home</title>
+</head>
+
+
+<body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand mb-0 h1" href="/">Project 3</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/calculator">Calulator</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/command">Command Line</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/git">Git</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/docker">Docker</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/azure">Azure</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/pylint">Pytest</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/tripleA">AAA Testing</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/oop">OOP</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/design">Techniques and Design</a>
+                </li>
+
+
+            </ul>
+        </div>
+    </div>
 </nav>
 
-    <div id="content">{% block content %}{% endblock %}</div>
+<div id="content">{% block content %}{% endblock %}</div>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<!-- Option 1: Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
-      <div id="footer">
-        {% block footer %}
-        &copy; Copyright 2021 by <a href="#">Keith Williams</a>.
-        {% endblock %}
-    </div>
-  </body>
+<div id="footer">
+    {% block footer %}
+
+
+    <footer class="bg-dark text-center text-lg-start">
+
+        <!-- Copyright -->
+        <div class="text-center text-white p-3">
+            © Copyright 2021: Kevin Ramos
+        </div>
+    </footer>
+
+
+    {% endblock %}
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
