--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,17 +1,145 @@
 {% extends "base.html" %}
 {% block title %}Index{% endblock %}
 {% block head %}
-    {{ super() }}
-    <style type="text/css">
-        .important { color: #336699; }
-    </style>
+{{ super() }}
 {% endblock %}
 {% block content %}
-    <h1>Index</h1>
-    <p class="important">
-      Welcome to my awesome homepage.
-        <img src="{{ url_for('static', filename='images/sample.jpeg') }}">
-    </p>
 
-<a href="/good/1.0/2.0">One Plus Two Good</a><br><a href="/bad/1/2">One Plus Two Bad</a>
+<div class="container bg-light">
+
+    <br>
+
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card bg-light">
+                <div class="card-body">
+                    <h4 class="card-title">Command Line</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">The Basics</h6>
+                    <p class="card-text">
+                        Before we learn the tools for useful web development, we need to learn the basics of command
+                        line.
+                    </p>
+                    <a href="/command" class="btn btn-outline-danger">Learn More</a>
+                </div>
+            </div>
+        </div>
+
+        <br>
+
+        <div class="col-md-6">
+            <div class="card bg-light">
+                <div class="card-body">
+                    <h4 class="card-title">Git</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">Version Control</h6>
+                    <p class="card-text">
+
+                        In order to effectively collaborate with other partners, we need to learn how to use Git.
+                        Git is also useful for keeping track of our progress.
+                    </p>
+                    <a href="/git" class="btn btn-outline-danger">Learn More</a>
+                </div>
+            </div>
+        </div>
+
+        <br>
+
+    </div>
+
+    <br>
+
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card bg-light">
+                <div class="card-body">
+                    <h4 class="card-title">Docker</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">Containerization</h6>
+                    <p class="card-text">To effectively build our applications, we need to containerize our
+                        projects using Docker.</p>
+                    <a href="/docker" class="btn btn-outline-danger">Learn More</a>
+                    <br>
+                </div>
+            </div>
+        </div>
+
+        <br>
+
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body bg-light">
+                    <h4 class="card-title">Azure</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">Host using Cloud</h6>
+                    <p class="card-text">To deploy Docker containers on Azure, we need to properly set up our image
+                        and ACI. </p>
+                    <a href="/azure" class="btn btn-outline-danger">Learn More</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <br>
+
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card bg-light">
+                <div class="card-body">
+                    <h4 class="card-title">Pylint</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">Pylint</h6>
+                    <p class="card-text">To effectively build our applications, we need to containerize our
+                        projects using Docker.</p>
+                    <a href="/pylint" class="btn btn-outline-danger">Learn More</a>
+                    <br>
+                </div>
+            </div>
+        </div>
+
+        <br>
+
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body bg-light">
+                    <h4 class="card-title">AAA Testing</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">AAA Testing</h6>
+                    <p class="card-text">To deploy Docker containers on Azure, we need to properly set up our image
+                        and ACI. </p>
+                    <a href="/tripleA" class="btn btn-outline-danger">Learn More</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <br>
+
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card bg-light">
+                <div class="card-body">
+                    <h4 class="card-title">OOP</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">OOP</h6>
+                    <p class="card-text">To effectively build our applications, we need to containerize our
+                        projects using Docker.</p>
+                    <a href="/oop" class="btn btn-outline-danger">Learn More</a>
+                    <br>
+                </div>
+            </div>
+        </div>
+
+        <br>
+
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body bg-light">
+                    <h4 class="card-title">Choose topic</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">Choose topic</h6>
+                    <p class="card-text">To deploy Docker containers on Azure, we need to properly set up our image
+                        and ACI. </p>
+                    <a href="/design" class="btn btn-outline-danger">Learn More</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <br><br>
+
+</div>
+
 {% endblock %}
